# ESS230

./: .gitignore  setup.py  woa.py
HW1/: README.md  prob1.py  prob2.py  prob3.py  prob4.py  prob5.py  prob6.py
HW1/JULIA 2023/: README.md  prob1.jl  prob2.jl  prob3.jl  prob4.jl  prob5.jl
HW2/: prob1.py
etopotools/: README.md  pyproject.toml  setup.py
etopotools/src/etopotools/: __init__.py  core.py
woatools/: README.md  __init__.py  setup.py  woa.py
woatools/src/woatools/: __init__.py  database.py  woa.py
woatools/tests/: pyproject.toml  test.py  test_quiet.py
